--- a/notion-memo/package.json
+++ b/notion-memo/package.json
@@ -1,14 +1,20 @@
 {
   "name": "notion-memo",
   "version": "1.0.0",
+  "private": true,
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "esbuild notion-post.js --bundle --platform=node --outfile=dist/notion-post.bundle.js",
+    "postbuild": "chmod +x dist/notion-post.bundle.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.0"
+  },
+  "devDependencies": {
+    "esbuild": "^0.19.5"
   }
 }
