--- a/notion-memo/package.json
+++ b/notion-memo/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "luxon": "^3.5.0",
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
